archetect-templating/tests/snapshots/test_lexer__lexer@operators.txt.snap
---
source: archetect_templating/tests/test_lexer.rs
description: "{{ (!a + b) * (c - d) / e % f // g ~ h }}"
input_file: archetect_templating/tests/lexer-inputs/operators.txt
---
VariableStart
  "{{"
ParenOpen
  "("
Bang
  "!"
Ident("a")
  "a"
Plus
  "+"
Ident("b")
  "b"
ParenClose
  ")"
Mul
  "*"
ParenOpen
  "("
Ident("c")
  "c"
Minus
  "-"
Ident("d")
  "d"
ParenClose
  ")"
Div
  "/"
Ident("e")
  "e"
Mod
  "%"
Ident("f")
  "f"
FloorDiv
  "//"
Ident("g")
  "g"
Tilde
  "~"
Ident("h")
  "h"
VariableEnd
  "}}"

