archetect-templating/tests/snapshots/test_lexer__lexer@single_brace.txt.snap
---
source: archetect_templating/tests/test_lexer.rs
description: "{foo} foo {bar}"
input_file: archetect_templating/tests/lexer-inputs/single_brace.txt
---
TemplateData("{foo} foo {bar}\n")
  "{foo} foo {bar}\n"

