archetect-templating/tests/snapshots/test_lexer__lexer@things.txt.snap
---
source: archetect_templating/tests/test_lexer.rs
description: "{{ with_int(42, -42) }}\n{{ with_float(1.5, -1.5) }}\n{{ with_string(\"string\") }}"
input_file: archetect_templating/tests/lexer-inputs/things.txt
---
VariableStart
  "{{"
Ident("with_int")
  "with_int"
ParenOpen
  "("
Int(42)
  "42"
Comma
  ","
Minus
  "-"
Int(42)
  "42"
ParenClose
  ")"
VariableEnd
  "}}"
TemplateData("\n")
  "\n"
VariableStart
  "{{"
Ident("with_float")
  "with_float"
ParenOpen
  "("
Float(1.5)
  "1.5"
Comma
  ","
Minus
  "-"
Float(1.5)
  "1.5"
ParenClose
  ")"
VariableEnd
  "}}"
TemplateData("\n")
  "\n"
VariableStart
  "{{"
Ident("with_string")
  "with_string"
ParenOpen
  "("
Str("string")
  "\"string\""
ParenClose
  ")"
VariableEnd
  "}}"

